--- a/04/spyEmployee.html
+++ b/04/spyEmployee.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Start -Jasmine example</title>
-
+	<title>Spy-employee</title>
 	<link rel="shortcut icon" type="image/png" href="lib/jasmine-2.4.1/jasmine_favicon.png">
 	<link rel="stylesheet" href="lib/jasmine-2.4.1/jasmine.css">
 
@@ -11,9 +10,8 @@
 	<script src="lib/jasmine-2.4.1/jasmine-html.js"></script>
 	<script src="lib/jasmine-2.4.1/boot.js"></script>
 
-	<script src="src/start.js"></script>
-	<script src="spec/startSpec.js"></script>
-	<script src="spec/setUpTearDown.js"></script>
+	<script src="src/employee.js"></script>
+	<script src="spec/employee.js"></script>
 </head>
 <body>
 
