--- a/04/spyEmployee.html
+++ b/04/spyEmployee.html
@@ -9,6 +9,7 @@
 	<script src="lib/jasmine-2.4.1/jasmine.js"></script>
 	<script src="lib/jasmine-2.4.1/jasmine-html.js"></script>
 	<script src="lib/jasmine-2.4.1/boot.js"></script>
+	<script src="lib/mock-ajax.js"></script>
 
 	<script src="src/employee.js"></script>
 	<script src="spec/employee.js"></script>
